--- a/src/app/shared/components/nav/nav.css
+++ b/src/app/shared/components/nav/nav.css
@@ -6,7 +6,7 @@
     box-shadow: 0 1px 10px 0 rgba(85, 81, 81, 1);
     width: 100%;
     height: 110px;
-    position: relative;
+    position: absolute;
     z-index: 10;
 }
 
